k8s/nest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  labels:
    app: node
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node 
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: srdjankljajo/k8s_nest_pg:1.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
        
        
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
