k8s/nest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:  
  name: nest-ingress  
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /$1  
spec:  
  rules:
    - host: nest-api.info 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-service
                port:
                  number: 5001
